<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_movie_title"
        android:textSize="30sp"
        android:layout_margin="@dimen/movie_title_margin"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_details_movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/movie_poster_margin_top"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_movie_rating"
                android:textSize="24sp"
                android:layout_margin="@dimen/movie_rating_margin"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_movie_synopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_movie_synopsis"
        android:textSize="14sp"
        android:layout_margin="@dimen/movie_synopsis_margin" />

</LinearLayout>